--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
+    "highlight.js": "^10.0.3",
+    "mavon-editor": "^2.9.0",
+    "qrcode": "^1.4.4",
     "vue": "^2.6.11",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.1.6",
     "vue-schart": "^2.0.0"
   },
@@ -22,8 +26,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "html-loader": "^1.1.0",
     "less": "^3.11.1",
     "less-loader": "^6.1.0",
+    "markdown-loader": "^5.1.0",
+    "svg-sprite-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
